fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@
       /* border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px; */
       background-image: url(seattle4.png);
-      background-position: 0 -20px;
+      /* background-position: 0 -20px; */
       background-repeat: no-repeat;
       background-size:cover;
       background-color: rgb(27	61	187)
